--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,12 @@
   box-sizing: border-box;
 }
 
+.about-bold{
+	font-weight: 500;
+	color: white;
+	font-size: 1.1rem;
+}
+
 a { text-decoration: none; }
 
 li { list-style: none; }
@@ -1995,5 +2001,6 @@ textarea.form-input::-webkit-resizer { display: none; }
 	 */
 
   .timeline-text { max-width: 700px; }
+
 
 }
