--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
+
 :root {
+
+  /**
+   * colors
+   */
+
+  /* gradient */
+
   --bg-gradient-onyx: linear-gradient(
     to bottom right, 
     hsl(240, 1%, 25%) 3%, 
@@ -29,6 +37,9 @@
     hsl(45, 100%, 72%), 
     hsl(35, 100%, 68%)
   );
+
+  /* solid */
+
   --jet: hsl(0, 0%, 22%);
   --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
@@ -41,7 +52,15 @@
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
+
+  /**
+   * typography
+   */
+
+  /* font-family */
   --ff-poppins: 'Poppins', sans-serif;
+
+  /* font-size */
   --fs-1: 24px;
   --fs-2: 18px;
   --fs-3: 17px;
@@ -51,13 +70,16 @@
   --fs-7: 13px;
   --fs-8: 11px;
 
-  
+  /* font-weight */
   --fw-300: 300;
   --fw-400: 400;
   --fw-500: 500;
   --fw-600: 600;
 
-
+  /**
+   * shadow
+   */
+  
   --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
   --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.25);
   --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
@@ -65,11 +87,22 @@
   --shadow-5: 0 24px 80px hsla(0, 0%, 0%, 0.25);
   --shadow-gold: 0 24px 100px hsla(51, 100%, 50%,0.2);
 
+  /**
+   * transition
+   */
+
   --transition-1: 0.25s ease;
   --transition-2: 0.5s ease-in-out;
 
 }
 
+
+
+
+
+/*-----------------------------------*\
+  #RESET
+\*-----------------------------------*/
 
 *, *::before, *::after {
   margin: 0;
@@ -197,6 +230,20 @@ article {
   z-index: 1;
   top: 0vh;
   position: sticky;
+}
+
+.timeline button{
+  background-image: url('../images/logo.ico');
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+  margin-top: 5px;;
+}
+
+.timeline button:hover{
+  background-position: 10cm;
+  transform: scale(1.1);
 }
 
 .separator {
@@ -360,7 +407,15 @@ main {
 }
 
 .avatar-box {
-  background: var(--bg-gradient-onyx);
+  background-color: blueviolet;
+  background-image: 
+    radial-gradient(at 83% 67%, rgb(152, 231, 156) 0, transparent 58%), 
+    radial-gradient(at 67% 20%, hsla(357,94%,71%,1) 0, transparent 59%), 
+    radial-gradient(at 88% 35%, hsla(222,81%,65%,1) 0, transparent 50%), 
+    radial-gradient(at 31% 91%, hsla(9,61%,61%,1) 0, transparent 52%), 
+    radial-gradient(at 27% 71%, hsla(336,91%,65%,1) 0, transparent 49%), 
+    radial-gradient(at 74% 89%, hsla(30,98%,65%,1) 0, transparent 51%), 
+    radial-gradient(at 53% 75%, hsla(174,94%,68%,1) 0, transparent 45%);
   border-radius: 20px;
 }
 
@@ -585,11 +640,11 @@ main {
 
 .service-icon-box { margin-bottom: 10px; cursor: pointer;}
 
-.service-icon-box img { margin: auto; }
+.service-icon-box img { margin: auto; user-select: none; }
 
-.service-content-box { text-align: center; }
+.service-content-box { text-align: center; cursor: pointer; }
 
-.service-item-title { margin-bottom: 7px; }
+.service-item-title { margin-bottom: 7px; cursor: pointer; }
 
 .service-item-text {
   color: var(--light-gray);
@@ -1886,7 +1941,6 @@ textarea.form-input::-webkit-resizer { display: none; }
   }
 
 
-
   /**
    * SIDEBAR
    */
@@ -1947,7 +2001,4 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .timeline-text { max-width: 700px; }
 
-
 }
-
-
